Fix: Treeview has two scrollbars
Resolves: #167
Resolves: #191

--- a/src/themes/default/scss/fsLayoutLeft/_fsBrowser.scss
+++ b/src/themes/default/scss/fsLayoutLeft/_fsBrowser.scss
@@ -252,6 +252,7 @@
   #fs-browser-tree {
 
     width: 100%;
+    overflow: hidden;
 
     // single node
     .k-item {
